--- a/details.css
+++ b/details.css
@@ -1,11 +1,17 @@
 
-.col{
-  display: inline-block;
-  padding: 0 10px 20px;
+
+body {
+    background-image: linear-gradient(rgba(255,255,150),rgba(255,200,150)),url(2248344.jpg);
+    background-color : #484848;
+    margin: 0;
+    padding: 0;
 }
-.form-group label{
-    
-    display: inline-block;
-    padding: 0 10px 20px;
-    
+h1 {
+    color : #000000;
+    text-align : center;
+    font-family: "SIMPSON";
+}
+form {
+    width: 350px;
+    margin: 0 auto;
 }
